--- a/_posts/2019-11-24-EM_derive_auxi.html
+++ b/_posts/2019-11-24-EM_derive_auxi.html
@@ -2,8 +2,9 @@
 title: 'EM Algorithm Derivation and Auxiliary Function'
 date: 2019-11-24
 permalink: /posts/EM_Algorithm_Derivation_and_Auxiliary_Function
-tags:
+category:
   - machine learning
+tags:
   - statistical learning
 ---
 
