fix the use . as file name

--- a/_posts/2019-12-19-Ubuntu_Mac_Theme.html
+++ b/_posts/2019-12-19-Ubuntu_Mac_Theme.html
@@ -1,7 +1,7 @@
 ---
 title: 'Set Mac Like Theme for Ubuntu 18.04'
 date: 2019-12-19
-permalink: /posts/Set_Mac_Like_Theme_for_Ubuntu_18.04
+permalink: /posts/Set_Mac_Like_Theme_for_Ubuntu_18
 tags:
   - ubuntu
 ---
